force-app/main/default/objects/Position__c/fields/Related_Interests__c.field-meta.xml
<CustomField>
    <fullName>Related_Interests__c</fullName>
    <description>Interests and qualifications relevant to this position.</description>
    <inlineHelpText>Select interest areas and qualifications relevant to this position. Must select at least one interest when the Position is open.</inlineHelpText>
    <label>Related Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Caregiving</fullName>
            </value>
            <value>
                <fullName>Children &amp; Youth</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Computers &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Disaster Relief</fullName>
            </value>
            <value>
                <fullName>Driver Safety</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Homelessness</fullName>
            </value>
            <value>
                <fullName>Hunger</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Legal Assistance</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>Politics/Legislative Issues</fullName>
            </value>
            <value>
                <fullName>Poverty</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Seniors</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Tax Return Preparation</fullName>
            </value>
            <value>
                <fullName>Teaching/Training</fullName>
            </value>
            <value>
                <fullName>Tutoring</fullName>
            </value>
            <value>
                <fullName>Veterans &amp; Military Families</fullName>
            </value>
            <value>
                <fullName>Women’s Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>