force-app/main/default/objects/Position__c/fields/Remaining_Open_Positions__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Open_Positions__c</fullName>
    <description>Number of positions still open for assignment ((Position_Openings__c) - (Number_of_Active_Assignments__c)).</description>
    <formula>IF(AND( ISPICKVAL(Status__c, &quot;Open&quot;),  Position_Openings__c - Number_of_Active_Assignments__c &gt;=0), Position_Openings__c -  Number_of_Active_Assignments__c, 
IF(AND( ISPICKVAL(Status__c, &quot;Open&quot;),  Position_Openings__c - Number_of_Active_Assignments__c &lt;0), 0,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of positions still open for assignment.</inlineHelpText>
    <label>Remaining Open Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>