force-app/main/default/objects/Position__c/fields/Remove_From_Custom_Reimbursement_Shares__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_Custom_Reimbursement_Shares__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove From Custom Reimbursement Shares</label>
    <type>Checkbox</type>
</CustomField>