force-app/main/default/objects/Position__c/fields/Resume_Request__c.field-meta.xml
<CustomField>
    <fullName>Resume_Request__c</fullName>
    <label>Resume Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resume Not Requested</fullName>
                <default>true</default>
                <label>Resume Not Requested</label>
            </value>
            <value>
                <fullName>Resume Optional</fullName>
            </value>
            <value>
                <fullName>Resume Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>