force-app/main/default/objects/Position__c/fields/Resume_Requested__c.field-meta.xml
<CustomField>
    <fullName>Resume_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box checked if a resume is requested for this position.</description>
    <inlineHelpText>Check this box if a resume is requested for this position.</inlineHelpText>
    <label>Resume Requested</label>
    <type>Checkbox</type>
</CustomField>