force-app/main/default/objects/Position__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This position is related to this generic role that is shared across AARP.</description>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>