force-app/main/default/objects/Position__c/fields/Serve_DC__c.field-meta.xml
<CustomField>
    <fullName>Serve_DC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the Serve DC Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the Serve DC Grant.</inlineHelpText>
    <label>Serve DC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>