force-app/main/default/objects/Position__c/fields/Split_State__c.field-meta.xml
<CustomField>
    <fullName>Split_State__c</fullName>
    <formula>Program__r.Split_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split State</label>
    <type>Text</type>
</CustomField>