force-app/main/default/objects/Position__c/fields/Standardization_State__c.field-meta.xml
<CustomField>
    <fullName>Standardization_State__c</fullName>
    <label>Standardization State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Standardized</fullName>
                <default>true</default>
                <label>Not Standardized</label>
            </value>
            <value>
                <fullName>Standardized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>