force-app/main/default/objects/Position__c/fields/Statewide_Opening__c.field-meta.xml
<CustomField>
    <fullName>Statewide_Opening__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this position should be posted statewide.</description>
    <inlineHelpText>Check this box if this position should be posted statewide.</inlineHelpText>
    <label>Statewide Opening</label>
    <type>Checkbox</type>
</CustomField>