force-app/main/default/objects/Position__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To post a position for recruitment, select &quot;Posted&quot; and to remove it, select &quot;Unposted.&quot;</description>
    <inlineHelpText>To post a position for recruitment, select &quot;Posted&quot; and to remove it, select &quot;Unposted.&quot;</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <label>Posted</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Unposted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>