force-app/main/default/objects/Position__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Captures the stipend amount allocated to this position from the Target Grant .</description>
    <inlineHelpText>Enter the amount allocated to this position from the Target Grant.</inlineHelpText>
    <label>Target</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>