force-app/main/default/objects/Position__c/fields/Time_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Time_Approval_Required__c</fullName>
    <description>Is time approval required and if so, how many levels of approval are required?</description>
    <inlineHelpText>Is time approval required and if so, how many levels of approval are required?</inlineHelpText>
    <label>Time Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Time_Entry_Tracking__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No -  0 Levels of Approval Required</fullName>
                <default>true</default>
                <label>No -  0 Levels of Approval Required</label>
            </value>
            <value>
                <fullName>Yes - 1 Level of Approval Required</fullName>
            </value>
            <value>
                <fullName>Yes - 2 Levels of Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>