force-app/main/default/objects/Position__c/fields/Time_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Time_Commitment__c</fullName>
    <description>Time commitment for this position.</description>
    <inlineHelpText>What is the expected time commitment for this position?</inlineHelpText>
    <label>Time Commitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>