force-app/main/default/objects/Position__c/fields/Time_Entry_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Tracking__c</fullName>
    <description>Is volunteer time entry permitted for this position?</description>
    <inlineHelpText>Is volunteer time entry permitted for this position?</inlineHelpText>
    <label>Time Entry Permitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>