force-app/main/default/objects/Position__c/fields/Volunteer_Intake_Form__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Intake_Form__c</fullName>
    <description>Volunteer Intake Form prospect should be directed to for this position.</description>
    <inlineHelpText>Select the appropriate Volunteer Intake Form prospect should be directed to for this position.</inlineHelpText>
    <label>Volunteer Intake Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Intake Form</fullName>
                <label>Volunteer Interest Form</label>
            </value>
            <value>
                <fullName>Driver Safety Application</fullName>
            </value>
            <value>
                <fullName>Experience Corps Intake Form</fullName>
            </value>
            <value>
                <fullName>States Leadership Application</fullName>
                <label>States Volunteer Application</label>
            </value>
            <value>
                <fullName>Tax-Aide Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>