force-app/main/default/objects/Position__c/fields/Worked_Local_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Worked_Local_Tax_Code__c</fullName>
    <description>Captures the local tax code used by ADP.</description>
    <inlineHelpText>Enter the local tax code used by ADP to process stipends for this position.</inlineHelpText>
    <label>Worked Local Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Philadelphia Resident - 3901</fullName>
            </value>
            <value>
                <fullName>Philadelphia NR - 3912</fullName>
            </value>
            <value>
                <fullName>Abington TWP - 5145</fullName>
            </value>
            <value>
                <fullName>Upper Chichester TWP - 5579</fullName>
            </value>
            <value>
                <fullName>Haverfort - 5641</fullName>
            </value>
            <value>
                <fullName>Upper Darby - 5658</fullName>
            </value>
            <value>
                <fullName>Lower Merion  - 5670</fullName>
            </value>
            <value>
                <fullName>Not Located in PA - 5673</fullName>
            </value>
            <value>
                <fullName>Derry TWP - 7529</fullName>
            </value>
            <value>
                <fullName>East Goshen TWP - 7606</fullName>
            </value>
            <value>
                <fullName>Wayne TWP - 9448</fullName>
            </value>
            <value>
                <fullName>Horsham TWP - 9749</fullName>
            </value>
            <value>
                <fullName>Cheltenham  - 9751</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>