force-app/main/default/objects/Position__c/fields/Worked_State_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Worked_State_Tax_Code__c</fullName>
    <description>Captures the state tax code used by ADP.</description>
    <inlineHelpText>Enter the state tax code used by ADP to process stipends for this position.</inlineHelpText>
    <label>Worked State Tax Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>