force-app/main/default/objects/Position__c/validationRules/Deduction_Amount_Must_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Deduction_Amount_Must_Be_Negative</fullName>
    <active>true</active>
    <description>Requires deduction amount to be a negative value.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Deduction_Amount__c )),
 Deduction_Amount__c &gt;0
)</errorConditionFormula>
    <errorMessage>Deduction amount must be a negative value in order to be processed properly.</errorMessage>
</ValidationRule>