force-app/main/default/objects/Position__c/validationRules/Limited_Edit_Access_to_Program_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Limited_Edit_Access_to_Program_Name</fullName>
    <active>true</active>
    <description>Some profiles with position edit access cannot edit Program field.</description>
    <errorConditionFormula>AND(OR(
$Profile.Name = &quot;Driver Safety Volunteer Leader - LMS Admin&quot;, 
$Profile.Name = &quot;Driver Safety Volunteer Leader - Read Only - LMS Admin&quot;),  
(ISCHANGED(   Program__c )))</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Program field can only be edited by specified users.  Please contact an AARP staff person from your program if you need to edit this field.</errorMessage>
</ValidationRule>