force-app/main/default/objects/Position__c/validationRules/Limited_Edit_Access_to_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Limited_Edit_Access_to_Role</fullName>
    <active>true</active>
    <description>Some profiles with position edit access cannot edit Role field.</description>
    <errorConditionFormula>AND(OR(
$Profile.Name = &quot;Driver Safety Volunteer Leader - LMS Admin&quot;, 
$Profile.Name = &quot;Driver Safety Volunteer Leader - Read Only - LMS Admin&quot;),  
(ISCHANGED(  Role__c  )))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>Role field can only be edited by specified users.  Please contact an AARP staff person from your program if you need to edit this field.</errorMessage>
</ValidationRule>