force-app/main/default/objects/Position__c/validationRules/Non_Payroll_Taxed_Stipend_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Payroll_Taxed_Stipend_Amount</fullName>
    <active>true</active>
    <description>If Non-Payroll Taxed Stipend Eligible = TRUE:

Non-Payroll Taxed Stipend Amount field on Position CANNOT be blank</description>
    <errorConditionFormula>AND(( Non_Payroll_Taxed_Stipend_Eligible__c  = TRUE),  ISBLANK(Non_Payroll_Taxed_Stipend_Amount__c))</errorConditionFormula>
    <errorDisplayField>Non_Payroll_Taxed_Stipend_Amount__c</errorDisplayField>
    <errorMessage>Non-Payroll Taxed Stipend Amount field on Position CANNOT be blank</errorMessage>
</ValidationRule>