force-app/main/default/objects/Position__c/validationRules/NonPayroll_Taxed_Stipend_Accounting_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>NonPayroll_Taxed_Stipend_Accounting_Code</fullName>
    <active>true</active>
    <description>If Non-Payroll Taxed Stipend Eligible = TRUE:

Non-Payroll Taxed Stipend Amount field on Position CANNOT be blank</description>
    <errorConditionFormula>AND(( Non_Payroll_Taxed_Stipend_Eligible__c = TRUE), ISBLANK(Non_Payroll_Taxed_Stipend_AccountingCode__c))</errorConditionFormula>
    <errorDisplayField>Non_Payroll_Taxed_Stipend_AccountingCode__c</errorDisplayField>
    <errorMessage>Non-Payroll Taxed Stipend AccountingCode field on Position CANNOT be blank</errorMessage>
</ValidationRule>