force-app/main/default/objects/Position__c/validationRules/Profile_Type_Field_Sys_Admin_Edit_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Profile_Type_Field_Sys_Admin_Edit_Only</fullName>
    <active>true</active>
    <description>Profile_Type field is editable only by System Administrators and Delegated Administrators after initial position record creation.</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 $Profile.Name &lt;&gt; &quot;System Integrator&quot;,
 $Permission.Delegated_Administrator = FALSE, 
  ISCHANGED( Profile_Type__c ),
 NOT(ISNEW())   
)</errorConditionFormula>
    <errorDisplayField>Profile_Type__c</errorDisplayField>
    <errorMessage>Profile Type can only be edited by a System Administrator or Delegated Administrator.  Please contact your system administrator if you wish to edit this field.</errorMessage>
</ValidationRule>