force-app/main/default/objects/Position__c/validationRules/Require_5_or_9_digit_Postal_Codes.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_5_or_9_digit_Postal_Codes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Postal_Code__c)), NOT(REGEX(Postal_Code__c,
&quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
    <errorDisplayField>Postal_Code__c</errorDisplayField>
    <errorMessage>When a postal code is entered or required it must be in the following format #####, ######### or #####-#### .</errorMessage>
</ValidationRule>