force-app/main/default/objects/Position__c/validationRules/Require_Deduction_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Deduction_Code</fullName>
    <active>true</active>
    <description>If a deduction amount is entered, a deduction code must be entered. Inversely, if the deduction code has a value, deduction amount must be greater than 0.</description>
    <errorConditionFormula>OR(
AND(
 Deduction_Amount__c &lt; 0,
  ISBLANK(TEXT( Deduction_Code__c ))),
AND(
 Deduction_Amount__c = 0,
  NOT(ISBLANK(TEXT( Deduction_Code__c ))))
)</errorConditionFormula>
    <errorMessage>If you enter a Deduction Amount, you must select a Deduction Code. Similarly, if a Deduction Code is selected, you must enter a Deduction Amount that is greater than $0.00.</errorMessage>
</ValidationRule>