force-app/main/default/objects/Position__c/validationRules/Require_Department_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Department_Code</fullName>
    <active>true</active>
    <description>Requires a department code if the position is expense eligible.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Expense_Eligible__c , &quot;Yes&quot;),
 ISBLANK( Department_Code__c ) 
)</errorConditionFormula>
    <errorDisplayField>Department_Code__c</errorDisplayField>
    <errorMessage>A position that is expense eligible must have an associated department code. Please search for and select a department code in order to save this position.</errorMessage>
</ValidationRule>