force-app/main/default/objects/Position__c/validationRules/Two_Approvals_for_Experience_Corps_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Two_Approvals_for_Experience_Corps_Only</fullName>
    <active>true</active>
    <description>2 levels of approvals can only be selected for Experience Corps positions.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Time_Approval_Required__c, &quot;Yes - 2 Levels of Approval Required&quot;) ,
  NOT(CONTAINS(Program__r.Branding_Descriptor__c, &quot;Experience Corps&quot;))
)</errorConditionFormula>
    <errorDisplayField>Time_Approval_Required__c</errorDisplayField>
    <errorMessage>2 levels of approvals can only be selected for Experience Corps positions.</errorMessage>
</ValidationRule>