force-app/main/default/objects/Position__c/validationRules/Worked_State_Tax_Code_Value_Added_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Worked_State_Tax_Code_Value_Added_Rule</fullName>
    <active>true</active>
    <description>This is to allow all EC Staff members to add a value for the wo</description>
    <errorConditionFormula>AND(
ISNEW(), 
$Profile.Name = &quot;Experience Corps Staff - LMS Admin&quot;, 
ISBLANK($ObjectType.Position__c.Fields.Worked_State_Tax_Code__c))</errorConditionFormula>
    <errorDisplayField>Worked_State_Tax_Code__c</errorDisplayField>
    <errorMessage>Value must be added in the Worked State Tax Code to proceed.</errorMessage>
</ValidationRule>